--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,3 +20,92 @@ jobs:
       with:
         php-version: 8.2
         node-version: 20.6.0
+
+  build-assets:
+    runs-on: ubuntu-latest
+    outputs:
+      output1: ${{ steps.build-assets.outputs.build }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.6.0
+      - name: Run CI
+        if: ${{ hashFiles('package.json') != '' && hashFiles('package-lock.json') != '' }}
+        run: npm ci --no-progress --no-audit
+      - name: Run install
+        if: ${{ hashFiles('package.json') != '' && hashFiles('package-lock.json') == '' }}
+        run: npm install --no-progress --no-audit
+      - name: Run build
+        if: ${{ hashFiles('package-lock.json') != '' && hashFiles('gulp.js') == '' }}
+        run: npx --yes browserslist@latest --update-db && npm run build
+      - name: Run gulp
+        if: ${{ hashFiles('package-lock.json') != '' && hashFiles('gulp.js') != '' }}
+        run: gulp
+      - name: Create assets zip
+        uses: thedoctor0/zip-release@0.7.5
+        with:
+          type: zip
+          filename: 'assets.zip'
+          directory: dist
+          exclusions: '*.git* /*node_modules/* */source/sass/* */source/js/*'
+      - name: Upload Assets
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          artifacts: "assets.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        if: ${{ hashFiles('composer.json') != '' }}
+        with:
+          tools: composer
+      
+      - name: Build PHP
+        if: ${{ hashFiles('composer.json') != '' }}
+        run: |
+          composer install --prefer-dist --no-progress --no-dev
+          composer dump-autoload
+
+      - name: Process removables
+        run: |
+          removables=('.git'
+            '.gitignore'
+            '.github'
+            '.gitattributes'
+            'build.php'
+            '.npmrc'
+            'composer.json'
+            'composer.lock'
+            'env-example'
+            'webpack.config.js'
+            'package-lock.json'
+            'package.json'
+            'phpunit.xml.dist'
+            'README.md'
+            'gulpfile.js'
+            './node_modules/'
+            './source/sass/'
+            './source/js/'
+            'LICENSE'
+            'babel.config.js'
+            'yarn.lock'
+          )
+          for item in ${removables[@]}; do rm -rf $item; done;
+
+      - name: Create release zip
+        uses: thedoctor0/zip-release@0.7.5
+        with:
+          type: zip
+          filename: 'release.zip'
+          exclusions: '*.git* /*node_modules/* */source/sass/* */source/js/*'
+
+      - name: Upload release
+        uses: ncipollo/release-action@v1.12.0
+        with:
+          artifacts: "release.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
