--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
         uses: helsingborg-stad/upload-artifact@1.0.0
         with:
           artifact: "assets.zip"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
           release: ${{ github.event.release.tag_name }}
           repo: ${{ github.repository }}
           artifact_mime_type: application/zip
@@ -110,7 +110,7 @@ jobs:
         uses: helsingborg-stad/upload-artifact@1.0.0
         with:
           artifact: "release.zip"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
           release: ${{ github.event.release.tag_name }}
           repo: ${{ github.repository }}
           artifact_mime_type: application/zip
