--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,24 +5,24 @@ on:
     branches: [main]
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
+  # release:
+  #   runs-on: ubuntu-latest
 
-    steps:
+  #   steps:
 
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+  #   - name: Checkout
+  #     uses: actions/checkout@v2
+  #     with:
+  #       fetch-depth: 0
 
-    - name: Create Release and bump version files
-      uses: helsingborg-stad/release-wp-plugin-action@1.0.2
-      with:
-        php-version: 8.2
-        node-version: 20.6.0
+  #   - name: Create Release and bump version files
+  #     uses: helsingborg-stad/release-wp-plugin-action@1.0.2
+  #     with:
+  #       php-version: 8.2
+  #       node-version: 20.6.0
   
   build-assets:
-    needs: ['release']
+    # needs: ['release']
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -49,9 +49,11 @@ jobs:
         uses: thedoctor0/zip-release@0.7.5
         with:
           type: zip
-          filename: 'assets.zip'
+          filename: '../assets.zip'
           directory: dist
           exclusions: '*.git* /*node_modules/* */source/sass/* */source/js/*'
+      - name: ls
+        run: ls -ahl
       - name: Upload Assets
         uses: helsingborg-stad/upload-artifact@1.0.0
         with:
@@ -105,7 +107,7 @@ jobs:
           type: zip
           filename: 'release.zip'
           exclusions: '*.git* /*node_modules/* */source/sass/* */source/js/*'
-
+      
       - name: Upload release
         uses: helsingborg-stad/upload-artifact@1.0.0
         with:
