--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,24 +5,24 @@ on:
     branches: [main]
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
+  # release:
+  #   runs-on: ubuntu-latest
 
-    steps:
+  #   steps:
 
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+  #   - name: Checkout
+  #     uses: actions/checkout@v2
+  #     with:
+  #       fetch-depth: 0
 
-    - name: Create Release and bump version files
-      uses: helsingborg-stad/release-wp-plugin-action@1.0.2
-      with:
-        php-version: 8.2
-        node-version: 20.6.0
+  #   - name: Create Release and bump version files
+  #     uses: helsingborg-stad/release-wp-plugin-action@1.0.2
+  #     with:
+  #       php-version: 8.2
+  #       node-version: 20.6.0
 
   build-assets:
-    needs: ['release']
+    # needs: ['release']
     runs-on: ubuntu-latest
     steps:
       - name: Get latest release version
@@ -63,7 +63,7 @@ jobs:
         with:
           artifact: "assets.zip"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
-          release: $LATEST_RELEASE
+          release: ${{ env.LATEST_RELEASE }}
           repo: ${{ github.repository }}
           artifact_mime_type: application/zip
 
@@ -117,6 +117,6 @@ jobs:
         with:
           artifact: "release.zip"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
-          release: $LATEST_RELEASE
+          release: ${{ env.LATEST_RELEASE }}
           repo: ${{ github.repository }}
           artifact_mime_type: application/zip
